--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -31,7 +31,9 @@
   --error-red: #f91717;
   --yellow: #fff500;
   --white: #ffffff;
-  --grey-light: #e8eaf0;
+  --grey-light: #f1f3f6;
+  --grey-medium: #777b8b;
+  --black_07: rgba(0, 0, 0, 0.7);
 }
 
 /* Указываем box sizing */
@@ -77,6 +79,8 @@ input {
 
   &::placeholder {
     font-weight: 400;
+    font-size: 13px;
+    color: var(--grey-medium);
   }
 }
 
@@ -86,11 +90,6 @@ input:-webkit-autofill:focus {
   transition:
     background-color 600000s 0s,
     color 600000s 0s;
-}
-
-input[type='password']:-webkit-autofill:focus {
-  color: var(--text-secondary) !important;
-  -webkit-text-fill-color: var(--text-secondary) !important;
 }
 
 input[data-autocompleted] {
@@ -119,19 +118,14 @@ html,
 body,
 #root {
   -webkit-overflow-scrolling: touch;
-  font-family: 'customFont', 'Inter', sans-serif;
-  color: var(--text-primary);
+  font-family: 'Roboto', sans-serif;
   height: 100%;
-  font-feature-settings:
-    'liga' on,
-    'salt' on;
 }
 
 body,
 #root {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
-  background-color: var(--zinc-950);
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
@@ -164,7 +158,6 @@ input[type='search']::-webkit-search-cancel-button {
   -webkit-appearance: none;
   height: 28px;
   width: 28px;
-  background-color: var(--zinc-300);
   mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 28'%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/%3E%3C/svg%3E")
     no-repeat center;
   mask-size: cover;
@@ -177,7 +170,6 @@ input[type='search']::-moz-search-cancel-button {
   -moz-appearance: none;
   height: 28px;
   width: 28px;
-  background-color: var(--zinc-300);
   mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 28'%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/%3E%3C/svg%3E")
     no-repeat center;
   mask-size: cover;
