--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -3,21 +3,7 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'MTS Sans';
-  src: url('./fonts/MTS-Sans-Regular.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'MTS Sans';
-  src: url('./fonts/MTS-Sans-Medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'MTS Sans';
+  font-family: 'MTSSans';
   src: url('./fonts/MTS-Sans-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
@@ -36,9 +22,9 @@
   --grey-medium: #777b8b;
   --black_07: rgba(0, 0, 0, 0.7);
   --purple-darkest: #0f0219;
+  --black: #000;
 }
 
-/* Указываем box sizing */
 *,
 *::before,
 *::after {
@@ -67,13 +53,11 @@
   -webkit-overflow-scrolling: touch;
 }
 
-/* Убираем внутренние отступы */
 ul[class],
 ol[class] {
   padding: 0;
 }
 
-/* Убираем дефолтные стили инпутов */
 input {
   border: none;
   padding: 0;
@@ -86,7 +70,6 @@ input {
   }
 }
 
-/* При автокомплите инпутов сохраняет исходные цвета */
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
   transition:
@@ -98,7 +81,6 @@ input[data-autocompleted] {
   background-color: transparent !important;
 }
 
-/* Убираем внешние отступы */
 body,
 h1,
 h2,
@@ -130,24 +112,15 @@ body,
   text-rendering: optimizeSpeed;
 }
 
-/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
   list-style: none;
 }
 
-/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-/* Упрощаем работу с изображениями */
-img {
-  max-width: 100%;
-  display: block;
-}
-
-/* Наследуем шрифты для инпутов и кнопок */
 input,
 button,
 textarea,
@@ -155,31 +128,6 @@ select {
   font: inherit;
 }
 
-/* Стилизация для браузеров на основе WebKit (Chrome, Safari) */
-input[type='search']::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-  height: 28px;
-  width: 28px;
-  mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 28'%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/%3E%3C/svg%3E")
-    no-repeat center;
-  mask-size: cover;
-  cursor: pointer;
-  transform: translate(12px, 2px);
-}
-
-/* Стилизация для Firefox */
-input[type='search']::-moz-search-cancel-button {
-  -moz-appearance: none;
-  height: 28px;
-  width: 28px;
-  mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 28'%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/%3E%3C/svg%3E")
-    no-repeat center;
-  mask-size: cover;
-  cursor: pointer;
-  transform: translate(12px, 2px);
-}
-
-/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
   * {
     animation-duration: 0.01ms !important;
